# CHC-Comp

./: .gitignore  build_mac.sh  build_windows.bat  gui_app.py  pyproject.toml
.github/workflows/: build.yml  main.yml
src/charge_supervision_matrix/: __init__.py  analysis.py  cli.py  config.py  gui.py  output.py  parser.py  runner.py  suggest.py  wrvu.py
