[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charge-supervision-matrix"
version = "0.1.0"
description = "Generate Charge Summary and Supervision Matrix from iKnowMed All Signed Charges exports"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.scripts]
charge-supervision-matrix = "charge_supervision_matrix.cli:main"
charge-supervision-matrix-gui = "charge_supervision_matrix.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
